@@ -2,11 +2,12 @@ import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.util.ArrayList;
-import javax.swing.*;
 import java.util.Collections;
 import java.util.Objects;
+import javax.swing.*;
 
 public class Blackjack {
+    private ArrayList<Card> deck;
 
     private class Card {
         private String value;
@@ -40,40 +41,49 @@ public class Blackjack {
         }
     }
 
-    private ArrayList<Card> deck;
-
-    //dealer stuff
     Card hiddenCard;
     ArrayList<Card> dealerHand;
     int dealerSum;
     int dealerAceCount;
 
-    //player stuff
     ArrayList<Card> playerHand;
     int playerSum;
     int playerAceCount;
 
-    //window
     int boardWidth = 600;
     int boardHeight = boardWidth;
 
-    int cardWidth = 110; //1:1.4 ratio
+    int cardWidth = 110;
     int cardHeight = 154;
 
     int playerscore = 1000;
     int dealerscore = 1000;
+
     JFrame frame = new JFrame("Blackjack - 6:5");
     Boolean dealercardhidden = true;
+    Boolean initwagerplaced = false;
+
     JPanel gamePanel = new JPanel() {
         @Override
         public void paintComponent(Graphics g) {
             super.paintComponent(g);
 
-            JTextField textField = new JTextField(); // Creating text field
-            textField.setBounds(50, 40, 200, 30);
-            frame.add(textField);
+            while (initwagerplaced = false) {
+                Image hiddenCardImg = new ImageIcon(getClass().getResource("./cards/BACK.png")).getImage();
+                g.drawImage(hiddenCardImg, 20, 20, cardWidth, cardHeight, null);
+
+                for (int i = 0; i < playerHand.size(); i++) {
+                    Card card = playerHand.get(i);
+                    Image cardImg = new ImageIcon(Objects.requireNonNull(getClass().getResource(card.getImagePath()))).getImage();
+                    g.drawImage(hiddenCardImg, 25 + cardWidth * i, 526 - cardHeight, cardWidth, cardHeight, null);
+                }
+                for (int i = 0; i < dealerHand.size(); i++) {
+                    Card card = dealerHand.get(i);
+                    Image cardImg = new ImageIcon(getClass().getResource(card.getImagePath())).getImage();
+                    g.drawImage(hiddenCardImg, cardWidth + 25 + (cardWidth + 5) * i, 20, cardWidth, cardHeight, null);
+                }
+            }
             try {
-                //draw hidden card
                 if (dealercardhidden) {
                     Image hiddenCardImg = new ImageIcon(getClass().getResource("./cards/BACK.png")).getImage();
                     g.drawImage(hiddenCardImg, 20, 20, cardWidth, cardHeight, null);
@@ -82,17 +92,16 @@ public class Blackjack {
                     Image faceuphiddencard = new ImageIcon(getClass().getResource(card.getImagePath())).getImage();
                     g.drawImage(faceuphiddencard, 20, 20, cardWidth, cardHeight, null);
                 }
-                //draw dealer's hand
                 for (int i = 0; i < dealerHand.size(); i++) {
                     Card card = dealerHand.get(i);
                     Image cardImg = new ImageIcon(getClass().getResource(card.getImagePath())).getImage();
-                    g.drawImage(cardImg,cardWidth + 25 + (cardWidth + 5)*i,20,cardWidth,cardHeight,null);
+                    g.drawImage(cardImg, cardWidth + 25 + (cardWidth + 5) * i, 20, cardWidth, cardHeight, null);
                 }
             } catch (Exception e) {
                 e.printStackTrace();
             }
+
             try {
-                //draw player hand
                 for (int i = 0; i < playerHand.size(); i++) {
                     Card card = playerHand.get(i);
                     Image cardImg = new ImageIcon(Objects.requireNonNull(getClass().getResource(card.getImagePath()))).getImage();
@@ -101,20 +110,15 @@ public class Blackjack {
             } catch (Exception e) {
                 e.printStackTrace();
             }
-            if(!stayButton.isEnabled()){ // Prints message depending on result
-                System.out.println("STAY: ");
-                System.out.println("DEALER: " + dealerSum);
-                System.out.println("PLAYER: "+playerSum);
 
+            if (!stayButton.isEnabled()) {
                 String message = "";
-
                 boolean playerblackjack = playerHand.size() == 2 && playerSum == 21;
                 boolean dealerblackjack = hiddenCard.getValue() + dealerHand.get(0).getValue() == 21 &&
-                        (hiddenCard.isAce() ||dealerHand.get(0).isAce());
+                        (hiddenCard.isAce() || dealerHand.get(0).isAce());
 
                 if (playerblackjack && dealerblackjack) {
                     message = "Push - BJ";
-
                 } else if (playerblackjack) {
                     message = "Player Wins - BJ";
                     dealerscore -= 50;
@@ -142,17 +146,18 @@ public class Blackjack {
                     playerscore -= 50;
                     dealerscore += 50;
                 }
-                g.setFont(new Font("Arial",Font.PLAIN,30));
+                g.setFont(new Font("Arial", Font.PLAIN, 30));
                 g.setColor(Color.white);
-                g.drawString(message,220, (boardHeight/2) - 30);
-
+                g.drawString(message, 220, (boardHeight / 2) - 30);
             }
-            g.setFont(new Font("Arial",Font.PLAIN,20));
+            g.setFont(new Font("Arial", Font.PLAIN, 20));
             g.setColor(Color.white);
-            g.drawString("Playerscore: " + String.valueOf(playerscore),25, (boardHeight/2) + 15);
-            g.drawString("Dealerscore: " + String.valueOf(dealerscore),25, (boardHeight/2) - 7);
+            g.drawString("Playerscore: " + playerscore, 25, (boardHeight / 2) + 15);
+            g.drawString("Dealerscore: " + dealerscore, 25, (boardHeight / 2) - 7);
+
         }
     };
+
     JPanel buttonPanel = new JPanel();
     JButton hitButton = new JButton("Hit");
     JButton stayButton = new JButton("Stay");
@@ -175,138 +180,110 @@ public class Blackjack {
         buttonPanel.add(hitButton);
         stayButton.setFocusable(false);
         buttonPanel.add(stayButton);
-        frame.add(buttonPanel, BorderLayout.SOUTH);
         newgamebutton.setFocusable(false);
         buttonPanel.add(newgamebutton);
+        frame.add(buttonPanel, BorderLayout.SOUTH);
 
-
+        String initwager = JOptionPane.showInputDialog(null, "Enter your initial wager");
+        if (initwager != null) {
+            initwagerplaced = true;
+        }
         hitButton.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
-                Boolean playerbust = false;
-
                 Card card = deck.remove(deck.size() - 1);
                 playerSum += card.getValue();
                 playerAceCount += card.isAce() ? 1 : 0;
                 playerHand.add(card);
-                gamePanel.repaint();
                 while (playerSum > 21 && playerAceCount > 0) {
                     playerSum -= 10;
                     playerAceCount--;
                 }
                 if (playerSum > 21 && playerAceCount == 0) {
-                    System.out.println(card + " - Playersum: " + playerSum);
-                    System.out.println("You bust");
-                    playerbust = true;
                     hitButton.setEnabled(false);
                     stayButton.setEnabled(false);
-                } else {
-                    System.out.println(card + " - Playersum: " + playerSum);
                 }
-
                 gamePanel.repaint();
             }
         });
+
         stayButton.addActionListener(new ActionListener() {
             public void actionPerformed(ActionEvent e) {
                 dealercardhidden = false;
-
-                gamePanel.repaint();
                 hitButton.setEnabled(false);
                 stayButton.setEnabled(false);
 
-                while (dealerSum < 17) { // Hits until > 17
-                    Card card = deck.removeLast();
+                while (dealerSum < 17) {
+                    Card card = deck.remove(deck.size() - 1);
                     dealerSum += card.getValue();
                     dealerAceCount += card.isAce() ? 1 : 0;
                     dealerHand.add(card);
-                    System.out.println("Dealer Card added" + card);
-                    System.out.println("Dealer Hand Value" + dealerSum);
-                    gamePanel.repaint();
-                    while (dealerSum > 21 && dealerAceCount > 0) { //Reduces count if ace
+                    while (dealerSum > 21 && dealerAceCount > 0) {
                         dealerSum -= 10;
                         dealerAceCount--;
                     }
                 }
+                gamePanel.repaint();
             }
-        }); // <- Fixed bracketing here
+        });
+
         newgamebutton.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e){
+            public void actionPerformed(ActionEvent e) {
                 dealercardhidden = true;
                 hitButton.setEnabled(true);
                 stayButton.setEnabled(true);
                 startGame();
                 gamePanel.repaint();
-
             }
         });
     }
 
-    public void startGame () {
-        //deck
+    public void startGame() {
         buildDeck();
         shuffleDeck();
 
-        //dealer
-        dealerHand = new ArrayList<Card>();
+        dealerHand = new ArrayList<>();
         dealerSum = 0;
         dealerAceCount = 0;
 
-        hiddenCard = deck.removeLast();
+        hiddenCard = deck.remove(deck.size() - 1);
         dealerSum += hiddenCard.getValue();
         dealerAceCount += hiddenCard.isAce() ? 1 : 0;
 
-        Card card = deck.removeLast();
+        Card card = deck.remove(deck.size() - 1);
         dealerSum += card.getValue();
         dealerAceCount += card.isAce() ? 1 : 0;
         dealerHand.add(card);
 
-        System.out.println("DEALER HAND");
-        System.out.println(hiddenCard);
-        System.out.println(dealerHand);
-        System.out.println(dealerSum);
-        System.out.println(dealerAceCount);
-
-
-        //player stuff
-        playerHand = new ArrayList<Card>();
+        playerHand = new ArrayList<>();
         playerSum = 0;
         playerAceCount = 0;
+
         for (int i = 0; i < 2; i++) {
-            card = deck.removeLast();
+            card = deck.remove(deck.size() - 1);
             playerSum += card.getValue();
             playerAceCount += card.isAce() ? 1 : 0;
             playerHand.add(card);
         }
-
-        System.out.println("PLAYER HAND: ");
-        System.out.println(playerHand);
-        System.out.println(playerSum);
-        System.out.println(playerAceCount);
     }
 
-    public void buildDeck () {
-        deck = new ArrayList<Card>();
+    public void buildDeck() {
+        deck = new ArrayList<>();
         String[] values = {"A", "2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K"};
         String[] suits = {"C", "D", "H", "S"};
 
-        // use some loop structure to make a deck of cards
-        // 1) make Card object with (value, suit)
-        // 2) add Card object to deck
-        // do this for all value suit combos
         for (String value : values) {
             for (String suit : suits) {
                 Card card = new Card(value, suit);
                 deck.add(card);
             }
         }
-
-        System.out.println("BUILD DECK: ");
-        System.out.println(deck);
     }
 
-    public void shuffleDeck () {
+    public void shuffleDeck() {
         Collections.shuffle(deck);
-        System.out.println("AFTER SHUFFLE");
-        System.out.println(deck);
+    }
+
+    public static void main(String[] args) {
+        new Blackjack();
     }
 }
